audio changes & class app 5

--- a/Project1/bunnyBake/bunnyBake/Base.lproj/Main.storyboard
+++ b/Project1/bunnyBake/bunnyBake/Base.lproj/Main.storyboard
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
-        <array key="Gluten-VariableFont_wght.ttf">
+        <array key="Gluten-VariableFont_wght 4.03.37 PM.ttf">
             <string>Gluten-Regular</string>
         </array>
         <array key="RampartOne-Regular.ttf">
