--- a/Lab6/app/src/main/res/layout/activity_main.xml
+++ b/Lab6/app/src/main/res/layout/activity_main.xml
@@ -7,43 +7,74 @@
     tools:context=".MainActivity">
 
     <EditText
-        android:id="@+id/horoscope"
+        android:id="@+id/horoscopeInput"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="188dp"
-        android:layout_marginBottom="34dp"
+        android:layout_marginTop="25dp"
+        android:layout_marginBottom="23dp"
         android:ems="10"
+        android:fontFamily="@font/aclonica"
         android:hint="Enter Star Sign"
         android:inputType="textPersonName"
         android:minHeight="48dp"
-        android:text="@string/horoscopeInput"
-        app:layout_constraintBottom_toTopOf="@+id/button"
+        android:text="@string/horoscopeEntry"
+        app:layout_constraintBottom_toTopOf="@+id/findHoroscope"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/button"
+        android:id="@+id/findHoroscope"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="56dp"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/aclonica"
         android:onClick="determineHoroscope"
-        android:text="DIsplay Horoscope"
-        app:layout_constraintBottom_toTopOf="@+id/horoscopeImage"
+        android:text="Click!"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/horoscope" />
+        app:layout_constraintTop_toBottomOf="@+id/horoscopeInput" />
+
+    <TextView
+        android:id="@+id/horoscopeName"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/aclonica"
+        android:gravity="center"
+        app:autoSizeMinTextSize="20pt"
+        app:autoSizeTextType="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/findHoroscope"
+        tools:text="bags" />
+
+    <TextView
+        android:id="@+id/horoscopeText"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:fontFamily="@font/aclonica"
+        android:gravity="center"
+        app:autoSizeMinTextSize="8pt"
+        app:autoSizeTextType="none"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/horoscopeName"
+        tools:text="bags" />
 
     <ImageView
         android:id="@+id/horoscopeImage"
-        android:layout_width="272dp"
+        android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginBottom="64dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:layout_marginEnd="20dp"
+        android:layout_marginBottom="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintDimensionRatio="1:1"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/button"
-        app:srcCompat="@drawable/virgo" />
+        app:layout_constraintTop_toBottomOf="@+id/horoscopeText" />
 </androidx.constraintlayout.widget.ConstraintLayout>
