--- a/Lab6/app/src/main/res/values/colors.xml
+++ b/Lab6/app/src/main/res/values/colors.xml
@@ -7,4 +7,16 @@
     <color name="teal_700">#FF018786</color>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="primaryColor">#b39ddb</color>
+    <color name="primaryLightColor">#e6ceff</color>
+    <color name="primaryDarkColor">#836fa9</color>
+    <color name="secondaryColor">#fff176</color>
+    <color name="secondaryLightColor">#ffffa8</color>
+    <color name="secondaryDarkColor">#cabf45</color>
+    <color name="primaryTextColor">#000000</color>
+    <color name="secondaryTextColor">#000000</color>
+
+
+
 </resources>
