--- a/Project2/app/src/main/res/layout/activity_main.xml
+++ b/Project2/app/src/main/res/layout/activity_main.xml
@@ -77,16 +77,15 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
-        android:layout_marginBottom="8dp"
         android:fontFamily="@font/paytone_one"
-        android:gravity="center"
+        android:gravity="center|top"
         android:text="@string/helpInstructions"
         android:textAlignment="center"
         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
         android:textColor="@color/white"
         android:textSize="8sp"
         android:visibility="invisible"
-        app:autoSizeMinTextSize="8sp"
+        app:autoSizeMinTextSize="6sp"
         app:autoSizeTextType="uniform"
         app:layout_constraintBottom_toTopOf="@+id/helpFAB"
         app:layout_constraintEnd_toEndOf="@+id/helpOverlay"
