--- a/Project2/app/src/main/res/layout/activity_select_new_plant.xml
+++ b/Project2/app/src/main/res/layout/activity_select_new_plant.xml
@@ -7,18 +7,13 @@
     tools:context=".selectNewPlant">
 
     <LinearLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        android:layout_marginStart="8dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center_horizontal"
+        android:gravity="center"
         android:orientation="vertical"
-        android:showDividers="middle"
-        android:weightSum="1"
-        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
 
@@ -26,8 +21,7 @@
             android:id="@+id/choosePlant"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="clip_horizontal|center|top"
-            android:layout_marginTop="8dp"
+            android:layout_gravity="center|top"
             android:fontFamily="@font/paytone_one"
             android:text="@string/choosePlant"
             android:textAlignment="center"
@@ -37,11 +31,8 @@
 
         <LinearLayout
             android:id="@+id/seedLinear"
-            android:layout_width="match_parent"
+            android:layout_width="wrap_content"
             android:layout_height="@dimen/seedOptionHeight"
-            android:layout_marginStart="20dp"
-            android:layout_marginTop="16dp"
-            android:layout_marginEnd="20dp"
             android:gravity="center_horizontal"
             android:orientation="horizontal">
 
@@ -93,19 +84,19 @@
             android:layout_width="match_parent"
             android:layout_height="10dp"
             android:layout_weight="0"
-            app:srcCompat="@drawable/divider" />
+            app:srcCompat="@drawable/divider"
+            tools:visibility="invisible" />
 
         <LinearLayout
             android:id="@+id/plantLinear"
-            android:layout_width="384dp"
-            android:layout_height="548dp"
-            android:layout_marginBottom="16dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
             android:animateLayoutChanges="true"
-            android:gravity="center_horizontal"
+            android:gravity="center|center_horizontal"
             android:orientation="vertical"
             android:visibility="invisible"
-            android:weightSum="0.7"
-            tools:visibility="visible">
+            android:weightSum="0"
+            tools:visibility="invisible">
 
             <TextView
                 android:id="@+id/seedSelectionText"
