--- a/Project2/app/src/main/res/layout/activity_end_plant.xml
+++ b/Project2/app/src/main/res/layout/activity_end_plant.xml
@@ -97,7 +97,7 @@
                 android:fontFamily="@font/paytone_one"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="TextView"
-                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
+                android:textAppearance="@style/TextAppearance.AppCompat.Small"
                 android:textColor="@color/plantPalGreen"
                 tools:text="Your plant is happy!" />
 
