--- a/Project2/app/src/main/res/layout/activity_main.xml
+++ b/Project2/app/src/main/res/layout/activity_main.xml
@@ -60,7 +60,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/plantpalsTitle"
-        app:srcCompat="@drawable/plant"
+        app:srcCompat="@drawable/watering"
         tools:ignore="ImageContrastCheck" />
 
     <View
