--- a/Project2/app/src/main/res/layout-land/activity_main.xml
+++ b/Project2/app/src/main/res/layout-land/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/plantPalGreen"
+    android:background="#F7FFF6"
     tools:context=".MainActivity">
 
     <View
