--- a/Project2/app/src/main/res/layout/activity_main.xml
+++ b/Project2/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,6 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:backgroundTint="@color/plantPalGreen"
     tools:context=".MainActivity">
 
     <Button
@@ -77,6 +76,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
+        android:background="#F7FFF6"
         android:fontFamily="@font/paytone_one"
         android:gravity="center|top"
         android:text="@string/helpInstructions"
