--- a/Project2/app/src/main/res/layout/activity_main.xml
+++ b/Project2/app/src/main/res/layout/activity_main.xml
@@ -76,7 +76,7 @@
         android:layout_marginStart="15dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="15dp"
-        android:background="#F7FFF6"
+        android:background="#00F7FFF6"
         android:fontFamily="@font/paytone_one"
         android:gravity="center|top"
         android:text="@string/helpInstructions"
